Few additions Minitutorials 1 and 2 26052014

--- a/Minitutorial_01.html
+++ b/Minitutorial_01.html
@@ -183,8 +183,6 @@ hljs.initHighlightingOnLoad();
 
 <p>With the aim to provide an example of a complete workflow and to show some useful <em>techniques</em> and <em>functions</em> when <strong>programming in R</strong> (including how to get the most out of the <strong>documentation</strong>), I have created this <em>R script</em>.</p>
 
-<p>I hope someone find it useful.</p>
-
 <h2>Using the local help</h2>
 
 <h3>Searching for functions:</h3>
@@ -198,7 +196,7 @@ hljs.initHighlightingOnLoad();
 
 <p>and checking each of the functions contained in it by using the <strong>help()</strong> function or the question operator <strong>?</strong>, for example:</p>
 
-<pre><code class="r">help(Control)
+<pre><code class="r">help(&quot;Control&quot;)
 </code></pre>
 
 <pre><code>## starting httpd help server ... done
@@ -251,7 +249,7 @@ hljs.initHighlightingOnLoad();
 <pre><code class="r">?ls();
 </code></pre>
 
-<h3>Find the package a function belongs:</h3>
+<h3>Find the package a function belongs to:</h3>
 
 <p>We can double-check <strong>rm()</strong> really belongs to the base package by using the function <strong>find()</strong></p>
 
@@ -367,10 +365,10 @@ browseURL(&quot;https://github.com/Data-Camp/Rdocumentation&quot;)
 
 <pre><code>## Installing github repo Rdocumentation/master from Data-Camp
 ## Downloading master.zip from https://github.com/Data-Camp/Rdocumentation/archive/master.zip
-## Installing package from C:\Users\Diego\AppData\Local\Temp\RtmpqWFEvm/master.zip
+## Installing package from C:\Users\Diego\AppData\Local\Temp\RtmpCEj1eW/master.zip
 ## Installing Rdocumentation
 ## &quot;C:/PROGRA~1/R/R-31~1.0/bin/x64/R&quot; --vanilla CMD INSTALL  \
-##   &quot;C:\Users\Diego\AppData\Local\Temp\RtmpqWFEvm\devtools198c7ce26ae0\Rdocumentation-master&quot;  \
+##   &quot;C:\Users\Diego\AppData\Local\Temp\RtmpCEj1eW\devtools1b5c56a317c2\Rdocumentation-master&quot;  \
 ##   --library=&quot;C:/Users/Diego/Documents/R/win-library/3.1&quot; --install-tests
 </code></pre>
 
