--- a/Minitutorial_01.html
+++ b/Minitutorial_01.html
@@ -219,6 +219,40 @@ hljs.initHighlightingOnLoad();
 
 <p>We will use by now only the arguments <em>pattern</em> and <em>package</em>.</p>
 
+<p>Also note that in the section <strong>See Also</strong> appear links to other functions.  Particularly look at this line:</p>
+
+<hr/>
+
+<blockquote>
+<p>RSiteSearch to access an on-line search of R resources.</p>
+</blockquote>
+
+<hr/>
+
+<p>The function <strong>RSiteSearch()</strong> uses an on-line search engine for finding keywords and phrases through the R documentation.  Very powerful but you need to learn how to use it in order to get the results you want other wise you can end up with thousand documents not related with what you were looking for.</p>
+
+<p>Type for example:</p>
+
+<pre><code class="r">RSiteSearch(&quot;help&quot;)
+</code></pre>
+
+<pre><code>## A search query has been submitted to http://search.r-project.org
+## The results page should open in your browser shortly
+</code></pre>
+
+<p>The search returned 4027 documents.</p>
+
+<p>So a better search will look like this:</p>
+
+<pre><code class="r">RSiteSearch(&quot;{remove objects}&quot;, restrict = &quot;function&quot;)
+</code></pre>
+
+<pre><code>## A search query has been submitted to http://search.r-project.org
+## The results page should open in your browser shortly
+</code></pre>
+
+<p>Let&#39;s back to our local search, and see what the <strong>help.search()</strong> function can do.</p>
+
 <pre><code class="r">help.search(&quot;remove objects&quot;, package = &quot;base&quot;)
 </code></pre>
 
@@ -365,10 +399,10 @@ browseURL(&quot;https://github.com/Data-Camp/Rdocumentation&quot;)
 
 <pre><code>## Installing github repo Rdocumentation/master from Data-Camp
 ## Downloading master.zip from https://github.com/Data-Camp/Rdocumentation/archive/master.zip
-## Installing package from C:\Users\Diego\AppData\Local\Temp\RtmpCEj1eW/master.zip
+## Installing package from C:\Users\Diego\AppData\Local\Temp\RtmpWWhRHb/master.zip
 ## Installing Rdocumentation
 ## &quot;C:/PROGRA~1/R/R-31~1.0/bin/x64/R&quot; --vanilla CMD INSTALL  \
-##   &quot;C:\Users\Diego\AppData\Local\Temp\RtmpCEj1eW\devtools1b5c56a317c2\Rdocumentation-master&quot;  \
+##   &quot;C:\Users\Diego\AppData\Local\Temp\RtmpWWhRHb\devtools12c4321e74ab\Rdocumentation-master&quot;  \
 ##   --library=&quot;C:/Users/Diego/Documents/R/win-library/3.1&quot; --install-tests
 </code></pre>
 
