--- a/Minitutorial/html/Minitutorial_01.html
+++ b/Minitutorial/html/Minitutorial_01.html
@@ -229,7 +229,7 @@ hljs.initHighlightingOnLoad();
 
 <hr/>
 
-<p>The function <strong>RSiteSearch()</strong> uses an on-line search engine for finding keywords and phrases through the R documentation.  Very powerful but you need to learn how to use it in order to get the results you want other wise you can end up with thousand documents not related with what you were looking for.</p>
+<p>The function <strong>RSiteSearch()</strong> uses an on-line search engine for finding keywords and phrases through the R documentation.  Very powerful but you need to learn how to use it in order to get the results you want otherwise you can end up with thousand documents not related with what you were looking for.</p>
 
 <p>Type for example:</p>
 
@@ -250,6 +250,8 @@ hljs.initHighlightingOnLoad();
 <pre><code>## A search query has been submitted to http://search.r-project.org
 ## The results page should open in your browser shortly
 </code></pre>
+
+<p>Now our search returned 79 documents, and the second one listed is the one we were looking for.</p>
 
 <p>Let&#39;s back to our local search, and see what the <strong>help.search()</strong> function can do.</p>
 
@@ -399,10 +401,10 @@ browseURL(&quot;https://github.com/Data-Camp/Rdocumentation&quot;)
 
 <pre><code>## Installing github repo Rdocumentation/master from Data-Camp
 ## Downloading master.zip from https://github.com/Data-Camp/Rdocumentation/archive/master.zip
-## Installing package from C:\Users\Diego\AppData\Local\Temp\RtmpWWhRHb/master.zip
+## Installing package from C:\Users\Diego\AppData\Local\Temp\Rtmpi8nfX6/master.zip
 ## Installing Rdocumentation
 ## &quot;C:/PROGRA~1/R/R-31~1.0/bin/x64/R&quot; --vanilla CMD INSTALL  \
-##   &quot;C:\Users\Diego\AppData\Local\Temp\RtmpWWhRHb\devtools12c4321e74ab\Rdocumentation-master&quot;  \
+##   &quot;C:\Users\Diego\AppData\Local\Temp\Rtmpi8nfX6\devtools1d6c781a29b8\Rdocumentation-master&quot;  \
 ##   --library=&quot;C:/Users/Diego/Documents/R/win-library/3.1&quot; --install-tests
 </code></pre>
 
